# optimetricflow-doe

./: .gitignore  AUDIT_CHECKLIST.md  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: release-v0.1.0-template.md
examples/: bioprocess_optimization.py  run_doe.py
examples/data/: synthetic_fermentation.csv
flowsense_doe/: __init__.py  analyzer.py  bayesian.py  designer.py
flowsense_doe/presets/: __init__.py  bioprocess.py
